--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,15 @@ services:
       - mysql
     volumes:
       - ./:/var/www/programa
+  nginx:
+    image: nginx:1.13.8
+    ports:
+      - 80:80
+    volumes:
+      - ./:/var/www/programa/public
+      - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - php
   mysql:
     image: mysql:5.6
     environment:
