--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     ports:
       - 80:80
     volumes:
-      - ./:/var/www/programa/public
+      - ./:/var/www/programa
       - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - php
