--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,13 @@
 {
+    "autoload": {
+        "classmap": [
+            "src/"
+        ]
+    },
     "require-dev": {
         "phpunit/phpunit": "^6.0"
+    },
+    "require": {
+        "josegonzalez/dotenv": "3.2.0"
     }
 }
