--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,12 @@
 {
     "autoload": {
-        "classmap": [
-            "src/"
-        ]
+        "psr-0": {"": "src/"}
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0"
     },
     "require": {
-        "josegonzalez/dotenv": "3.2.0"
+        "josegonzalez/dotenv": "3.2.0",
+        "doctrine/orm": "2.6.3"
     }
 }
